created roles directory structure, removed unused playbooks

--- a/files/netdata.conf
+++ b/files/netdata.conf
@@ -17,7 +17,7 @@
 	# OOM score = keep
 	# glibc malloc arena max for plugins = 1
 	# glibc malloc arena max for netdata = 1
-	  hostname = prbf2-events
+	# hostname = prbf2-events
 	  history = 86400
 	# update every = 1
 	# config directory = /etc/netdata
